# fstringify

./: .gitignore  .travis.yml  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
fstringify/: __init__.py  api.py  cli.py  process.py  transform.py  utils.py
tests/: test_fstringify.py  test_process.py  test_utils.py
