[tool.poetry]
name = "fstringify"
version = "0.1.0"
description = ""
authors = ["jack <jacktasia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
astor = "^0.7.1"
black = "=18.9b0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
